Fix layout to not overlap with inset title bar

--- a/app/styles/areas/_app.scss
+++ b/app/styles/areas/_app.scss
@@ -23,6 +23,9 @@
         display: none;
       }
     }
+    &.macos {
+      padding-top: 40px;
+    }
   }
 
   &__list-wrap {
